# rushd

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  index.html  pyproject.toml  setup.py
.github/workflows/: build_docs.yml  build_helper.sh  python_ci.yml
docs/: build.py  conf.py  index.rst
docs/_build_code/: generate_xticklabels.py  plot_well_metadata.py
docs/_templates/: versions.html
docs/tutorial/: index.rst
docs/tutorial/flow/: index.rst
docs/tutorial/overview/: index.rst  plot_well_metadata.rst
docs/tutorial/plot/: index.rst
docs/tutorial/qpcr/: index.rst
en/future_features/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/future_features/.doctrees/: environment.pickle  index.doctree
en/future_features/_modules/: index.html
en/future_features/_sources/: index.rst.txt
en/future_features/_static/: example_plot_metadata.yaml
en/future_features/api/: rushd.html
en/future_features/tutorial/: index.html
en/main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/main/.doctrees/: environment.pickle  index.doctree
en/main/_modules/: index.html
en/main/_sources/: index.rst.txt
en/main/api/: rushd.html
en/main/tutorial/: generate_xticklabels.html  index.html  plot_well_metadata.html
en/v0.4.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/v0.4.0/.doctrees/: environment.pickle  index.doctree
en/v0.4.0/_modules/: index.html
en/v0.4.0/_static/: example_6well_plot_metadata.yaml
en/v0.4.0/api/: rushd.html
en/v0.4.0/tutorial/: index.html  plot_well_metadata.html
en/v0.5.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/v0.5.0/.doctrees/: environment.pickle  index.doctree
en/v0.5.0/_modules/: index.html
en/v0.5.0/api/: rushd.html
en/v0.5.0/tutorial/: generate_xticklabels.html  index.html  plot_well_metadata.html
en/v0.5.1/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
en/v0.5.1/.doctrees/: environment.pickle  index.doctree
en/v0.5.1/_modules/: index.html
en/v0.6.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
en/v0.6.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
en/v0.7.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
src/rushd/: __init__.py  check.py  ddpcr.py  flow.py  io.py  plot.py  qpcr.py  well_mapper.py
tests/: __init__.py  test_ddpcr.py  test_file_io.py  test_file_moi.py  test_flow.py  test_pandas_cache.py  test_plot.ipynb  test_plot.py  test_qpcr.py  test_sanity_check.py  test_well_mapper.py
tests/sample_data/: 2025.07.18-ddPCR.TANGLEs_wells.yaml  Rogi2-Clybl-v3-monoclones-5-24_20241204_100204_335.ddpcr
(+147 files in other folders)
