[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = []
target-version = "py37"
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "C",
    "C90",
    "D",
    "E",
    "F",
    "I",
    "W",
    "NPY201", # for checking Numpy 2.0
]

fixable = [
    "B",
    "C",
    "D",
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
