[build-system]
requires = ["setuptools >= 75.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rushd"
version = "1.0.0rc1"
authors = [
    { name="Christopher Johnstone", email="meson800@gmail.com" },
    { name="Kasey Love", email="kslove@mit.edu" },
    { name="Conrad Oakes", email="coakes@caltech.edu" }
]
description = "A package for maintaining robust, reproducible data management"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
# setuptools 75 (required for Python 3.8 support)
# requires this license layout
# once python 3.8 support is dropped, we can bump setuptools
# and use the modern approach:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license-and-license-files
license = {file = "LICENSE"}

dependencies = [
    "pyyaml",
    "pandas",
    "packaging",
    "matplotlib",
    "scipy",
    'typing-extensions;python_version<"3.8"',
    "py7zr",
]

[project.optional-dependencies]
dev = [
    "pyarrow",
    "pytest",
    "pytest-pep8",
    "pytest-cov",
    "pytest-mock",
    "pre-commit",
    "ruff",
    "seaborn",
    "build",
    "twine",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

[project.urls]
Homepage = "https://github.com/GallowayLabMIT/rushd"
Issues = "https://github.com/GallowayLabMIT/rushd/issues"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
ignore = []

select = [
    "B",
    "C",
    "C90",
    "D",
    "E",
    "F",
    "I",
    "W",
    "NPY201", # for checking Numpy 2.0
]

fixable = [
    "B",
    "C",
    "D",
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.coverage.run]
patch = ["subprocess"]
parallel = true
